# crimeaai-rust

./: .clippy.toml  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_v2.md  CHANGELOG_v3.md  Cargo.toml  DEPLOYMENT_INFO.md  DOWNLOAD_LINKS.md  FINAL_REPORT_v3.md  INSTALLATION_COMPLETE.md  INSTALL_WINDOWS.md  LICENSE-APACHE  LICENSE-MIT  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICKSTART_AI_CHAT.md  README.md  README_AI_CHAT.md  README_v3.md  SUMMARY_FOR_USER.md  build.rs  run.sh  rustfmt.toml  test_pdf_example.txt  test_simple.txt  test_training.txt
.cargo/: config.toml
VoxelCraiMod/: .gitignore  CHANGELOG.md  LICENSE-MIT  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
VoxelCraiMod/src/main/java/net/voxelcrai/config/: VoxelCraiConfig.java  VoxelCraiConfigScreen.java
VoxelCraiMod/src/main/java/net/voxelcrai/mixin/: ChunkBuilderMixin.java  WorldRendererMixin.java
VoxelCraiMod/src/main/java/net/voxelcrai/mod/: VoxelCraiMod.java  VoxelCraiModMenu.java
VoxelCraiMod/src/main/java/net/voxelcrai/pattern/: LightPattern1KB.java  LightPatternBuffer.java  PatternGenerator.java
VoxelCraiMod/src/main/java/net/voxelcrai/shader/: ShaderPackManager.java
VoxelCraiMod/src/main/resources/: fabric.mod.json  voxelcrai.mixins.json
VoxelCraiMod/src/main/resources/assets/voxelcrai/: icon.png.placeholder
VoxelCraiMod/src/main/resources/assets/voxelcrai/lang/: en_us.json  ru_ru.json
VoxelCraiMod/src/main/resources/assets/voxelcrai/shaders/: composite.fsh  composite.vsh  final.fsh  final.vsh  gbuffers_terrain.fsh  gbuffers_terrain.vsh  shaders.properties
VoxelCraiMod/src/main/resources/assets/voxelcrai/shaders/core/: voxelcrai_terrain.fsh  voxelcrai_terrain.vsh
VoxelCraiMod/src/main/resources/assets/voxelcrai/shaders/lib/: common.glsl
arm/: boot.s  linker.ld
examples/: training_data_en.txt  training_data_ru.txt
scripts/: build-release.sh  package.sh
src/: ai_model.rs  archguard.rs  chat_ui.rs  chat_ui_backup.rs  chat_ui_old.rs  concept.rs  document_reader.rs  ecs.rs  evolution.rs  file_processor.rs  kaif.rs  lib.rs  light_pattern.rs  lighting.rs  main.rs  nucleotide.rs  renderer.rs  scheduler.rs  system_monitor.rs  test_components.rs  ui.rs  voxel.rs  world.rs
src/shaders/: point_cloud.wgsl
