[package]
name = "adaptive-entity-engine"
version = "1.0.0"
edition = "2021"
authors = ["Adaptive Entity Engine Team"]
description = "High-performance voxel engine with ECS, Vulkan rendering, and adaptive evolution"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
# UI Framework
eframe = { version = "0.23.0", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.23.0"
pollster = "0.3.0"

# Math & AI
nalgebra = "0.32.0"
rand = "0.8.5"

# Serialization
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

# Utilities
half = "2.3.1"

# Optional: Original engine features (commented)
# env_logger = "0.11"
# bevy_ecs = "0.13"
# bevy_utils = "0.13"
# glam = "0.24"
# num-traits = "0.2"
# tokio = { version = "1.35", features = ["full"] }
# futures = "0.3"
# prometheus = "0.13"
# parking_lot = "0.12"
# dashmap = "5.5"
# uuid = { version = "1.6", features = ["v4"] }
# flate2 = "1.0"
# bincode = "1.3"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
# Bare-metal AArch64 support

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "ai-chat"
path = "src/main.rs"
